add delete user route
