# internal/application/api/user/controller.go
@@ -9,14 +9,14 @@ import (
 )
 
 type UserController struct {
-	service *domain.UserService
-	logger  pkg.Logger
+	userService *domain.UserService
+	logger      pkg.Logger
 }
 
 func NewUserController(service *domain.UserService, logger pkg.Logger) *UserController {
 	return &UserController{
-		service: service,
-		logger:  logger,
+		userService: service,
+		logger:      logger,
 	}
 }
 
@@ -30,7 +30,7 @@ func NewUserController(service *domain.UserService, logger pkg.Logger) *UserCont
 // @Param request body	UserRegisterRequest true "User registration request"
 // @Success 200 {object} map[string]string	"Successful registration"
 // @Failure 400 {object} map[string]string	"Invalid request or validation error"
-// @Router	/api/v1/register [post]
+// @Router	/api/v1/user/register [post]
 func (controller *UserController) Register(ctx *gin.Context) {
 	var req *UserRegisterRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
@@ -40,7 +40,7 @@ func (controller *UserController) Register(ctx *gin.Context) {
 		return
 	}
 
-	err := controller.service.Register(req.Username, req.Password, req.Email)
+	err := controller.userService.Register(req.Username, req.Password, req.Email)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 
@@ -65,7 +65,7 @@ func (controller *UserController) Register(ctx *gin.Context) {
 // @Param token query string true "Activation token from email"
 // @Success 200 {object} map[string]string "User activated successfully"
 // @Failure 400 {object} map[string]string "Token parameter is missing or invalid"
-// @Router /api/v1/activate [get]
+// @Router /api/v1/user/activate [get]
 func (controller *UserController) Activate(ctx *gin.Context) {
 	tokenStr, ok := ctx.GetQuery("token")
 	if !ok {
@@ -74,7 +74,7 @@ func (controller *UserController) Activate(ctx *gin.Context) {
 		return
 	}
 
-	if err := controller.service.Activate(tokenStr); err != nil {
+	if err := controller.userService.Activate(tokenStr); err != nil {
 		controller.logger.Error(err)
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 
@@ -95,16 +95,40 @@ func (controller *UserController) Activate(ctx *gin.Context) {
 // @Security BearerAuth
 // @Success 200 {object} map[string]string "Activation email sent successfully"
 // @Failure 400 {object} map[string]string "User unauthorized"
-// @Router /api/v1/activate/resend [post]
+// @Router /api/v1/user/activate/resend [post]
 func (controller *UserController) ResendActivation(ctx *gin.Context) {
 	userId := ctx.GetString("user_id")
 
-	if err := controller.service.ResendActivation(userId); err != nil {
+	if err := controller.userService.ResendActivation(userId); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": "message sent successfully",
+	})
+}
+
+// DeleteUser godoc
+//
+// @Summary Delete user account
+// @Description Permanently delete the authenticated user's account.
+// @Tags user
+// @Accept  json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} map[string]string "User account deleted successfully"
+// @Failure 400 {object} map[string]string "Invalid user ID or deletion failed"
+// @Failure 401 {object} map[string]string "User not authenticated"
+// @Router /api/v1/user/delete [delete]
+func (controller *UserController) DeleteUser(ctx *gin.Context) {
+	userId := ctx.GetString("user_id")
+	if err := controller.userService.Delete(userId); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"message": "user deleted successfully",
 	})
 }
